new: Prepare to have set up difference view